--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,11 @@
-language: sh
+os:
+  - osx
 
 before_script:
-  - wget "http://ftp.debian.org/debian/pool/main/s/shellcheck/shellcheck_0.3.7-5_amd64.deb"
-  - sudo dpkg -i "shellcheck_0.3.7-5_amd64.deb"
+  - brew install shellcheck
 
 script:
   - shellcheck mac
 
 notifications:
   email: false
-
-branches:
-  only:
-    - master
