--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_script:
   - brew install shellcheck
 
 script:
-  - shellcheck mac
+  - shellcheck mac install-dotfiles
 
 notifications:
   email: false
