Actually run laptop script on Travis
The test suite is currently non-existent, but making all of the scripts
part of the script section should ensure that a failure in any of them
should fail the build.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,15 @@ os:
 
 language: sh
 
-before_script:
+install:
   - brew install shellcheck
 
 script:
+  # TODO: Add actual assertions about expected state
+  # i.e. presence of dotfiles, directories, applications.
   - shellcheck mac install-dotfiles
+  - mac
+  - echo "SUCCESS!"
 
 notifications:
   email: false
