Try running with passwordless sudo

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ script:
   # TODO: Add actual assertions about expected state
   # i.e. presence of dotfiles, directories, applications.
   - shellcheck mac install-dotfiles
-  - ./mac
+  - sudo ./mac
   - echo "SUCCESS!"
 
 notifications:
