--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,8 @@ install:
 script:
   # TODO: Add actual assertions about expected state
   # i.e. presence of dotfiles, directories, applications.
-  - shellcheck mac install-dotfiles && ./mac && echo "SUCCESS!"
+  - shellcheck mac install-dotfiles && ./mac
+  - aliases
 
 notifications:
   email: false
