Try sourcing ~/.zshrc to see if that fixes things

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ script:
   # TODO: Add actual assertions about expected state
   # i.e. presence of dotfiles, directories, applications.
   - shellcheck mac install-dotfiles && ./mac
-  - aliases
+  - . ~/.zshrc && aliases
 
 notifications:
   email: false
