Fix shellcheck errors
Could have excluded the error in question (see https://github.com/koalaman/shellcheck/wiki/SC1117 for more details), but it is easier to just fix.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
 script:
   # TODO: Add actual assertions about expected state
   # i.e. presence of dotfiles, directories, applications.
-  - shellcheck mac install-dotfiles && ./mac
+  - shellcheck -e SC2039 mac install-dotfiles && ./mac
   - source $HOME/.zshrc
   - type vlc
 
